--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2301,6 +2301,13 @@
 		.image img {
 			border-radius: 4px;
 			display: block;
+			height:5em;
+		}
+
+		.image logo {
+			border-radius: 4px;
+			display: inline-block;
+			height:4em;
 		}
 
 		.image.left, .image.right {
@@ -2336,6 +2343,8 @@
 		.image.rounded {
 			border-radius: 100%;
 		}
+
+
 
 			.image.rounded img {
 				border: solid 0.5em rgba(144, 144, 144, 0.25);
